# my-study-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  local.env  pyproject.toml
app/: crud.py  main.py  models.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 2f2ab2e3c8ec_first_migration.py  b41052e874b9_first_migration.py  c98a384c9940_insert_card_description.py  ef6ce0fba8b6_.py
app/api/: deps.py  main.py  router.py
app/api/crud/: crud.py
app/api/models/: models.py
app/api/routes/: cards.py  decks.py
app/api/schemas/: schemas.py
app/core/: config.py
